overflow issue

--- a/css/resume.css
+++ b/css/resume.css
@@ -6,6 +6,7 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    overflow:hidden;
 }
 
 body {
@@ -15,6 +16,7 @@ body {
     background-size: cover;
     /* background-position: top center; */
     background-repeat: no-repeat;
+    overflow:hidden;
 }
 
 section{
